# profile-rag-system

./: README.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
notebook/: resume_rag_v2.ipynb
