[project]
name = "resume-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "docling>=2.107.0",
    "faiss-cpu>=1.14.3",
    "groq>=1.5.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
]
